# splints

./: .gitignore  README.md  pyproject.toml  setup.py
deprecated_pattern_linter/: diagnostics.py  server.py
deprecated_pattern_linter/types/: base.py  client_types.py  server_types.py
pattern_linter/: diagnostics.py  entrypoint.py
pattern_linter/types/: base.py  client.py  server.py
splinter/: decorators.py  diagnostics.py  entrypoint.py  logger.py  plugins.py  register_methods.py  rpc.py  rules.py  server.py
splinter/methods/: diagnostic.py  document_changed.py  document_closed.py  document_opened.py  exit.py  initialize.py  initialized.py  shutdown.py
splinter/types/: linting.py  shared.py  unions.py
splinter/types/methods/: diagnostic.py  document_changed.py  document_closed.py  document_opened.py  exit.py  initialize.py  publish_diagnostics.py  shutdown.py
splints/: decorators.py  diagnostics.py  entrypoint.py  register_methods.py  rpc.py  rules.py  server.py
splints/methods/: code_action_request.py  diagnostic.py  document_changed.py  document_closed.py  document_opened.py  exit.py  initialize.py  initialized.py  shutdown.py
splints/plugins/: default.py
splints/types/: base.py  linting.py  server.py  shared.py  unions.py
splints/types/lsp/: shared.py  unions.py
splints/types/methods/: diagnostic.py  document_changed.py  document_closed.py  document_opened.py  exit.py  initialize.py  publish_diagnostics.py  shutdown.py
splints_plugin/: default.py
